@@ -1,1 +1,12 @@
 SUBDIRS = images ui
+
+@INTLTOOL_XML_RULE@
+
+tocdir = $(datadir)/yelp
+
+toc_DATA =						\
+	toc.xml
+
+EXTRADIST :=						\
+	toc.xml.in					\
+	toc.xml
