@@ -1,5 +1,6 @@
 # Add files with translateable strings here.
 # Please keep this file sorted alphabetically.
+data/toc.xml.in
 data/ui/yelp.glade
 src/GNOME_Yelp.server.in
 src/yelp-base.c
