@@ -1,5 +1,12 @@
 2003-11-29  Shaun McCance  <shaunm@gnome.org>
 
+	* data/Makefile.am:
+	* data/toc.xml:
+	* po/POTFILES.in:
+	- Added the TOC XML file.
+
+2003-11-29  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-window.c:
 	- Don't leak GErrors.
 	- Report an error in the error signal callback.
